packages/beff-core/tests/snapshots/report_error__tests__fail2.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: Exposing a type that cannot be converted to JSON schema
   ╭─[<unknown>:1:1]
   │
 6 │             get: (): B => impl()
   │                       ┬  
   │                       ╰── `B` cannot be converted to JSON schema
───╯
Advice: 
   ╭─[<unknown>:1:1]
   │
 3 │     type B = A;
   │               ┬  
   │               ╰── `A` cannot be converted to JSON schema
───╯

Advice: 
   ╭─[<unknown>:1:1]
   │
 2 │     type A = () => void;
   │               ─────┬────  
   │                    ╰────── This cannot be converted to JSON schema
───╯

